ready to start 'create a template for the player bar'

--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -10,9 +10,11 @@
     </div>
   </section>
   <table class="album-view-song-list">
-    <tr class="album-view-song-item">
+    <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
       <td class="song-item-number">
-        1
+        <span ng-show="!playing && !hovered">1</span>
+        <a class="album-song-button" ng-show="!playing && hovered"><span class="ion-play"></span></a>
+        <a c;ass="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
       </td>
       <td class="song-item-title">
         Blue
