--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -18,7 +18,7 @@
     </p>
   </div>
   <div class="point column third">
-    <span class="ion-phone"></span>
+    <span class="ion-iphone"></span>
     <h5 class="point-title">Mobile enabled</h5>
     <p class="point-description">
       Listen to your music on the go. This streaming service is available on all mobile platforms.
