--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -5,8 +5,8 @@
         <span class="ion-skip-backward"></span>
       </a>
       <a class="play-pause">
-        <span class="ion-play" ng-show="!playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.play(song)"></span>
-        <span class="ion-pause" ng-show="playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.pause(song)"></span>
+        <span class="ion-play" ng-show="!playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.play()"></span>
+        <span class="ion-pause" ng-show="playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.pause()"></span>
       </a>
       <a class="next">
         <span class="ion-skip-forward"></span>
