somewhere on assignment 8

--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -8,7 +8,7 @@
         <span class="ion-play" ng-show="!playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.play()"></span>
         <span class="ion-pause" ng-show="playerBar.songPlayer.currentSong.playing" ng-click="playerBar.songPlayer.pause()"></span>
       </a>
-      <a class="next">
+      <a class="next" ng-click="playerBar.songPlayer.next()">
         <span class="ion-skip-forward"></span>
       </a>
     </div>
