--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -20,7 +20,7 @@
         {{ song.title }}
       </td>
       <td class="song-item-duration">
-        {{ song.duration }}
+        {{ song.duration | timecode }}
       </td>
     </tr>
   </table>
